Fix issue with promotion options not showing - the positioning is a bit dodgy, but this will do for now until i have more time.)

--- a/css/promote.css
+++ b/css/promote.css
@@ -1,10 +1,6 @@
-#ssb-promotion-box {
-
-}
-
 #ssb-promotion-box-pieces {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   background-color: white;
 }
 
@@ -13,6 +9,7 @@
   width: 75px;
   height: 75px;
   display: block;
+  position: relative;
 }
 
 #ssb-promotion-box piece:hover {
@@ -20,34 +17,34 @@
 }
 
 #ssb-promotion-box piece.white.queen {
-  background-image: url('chessground/assets/images/pieces/merida/wQ.svg');
+  background-image: url('chessground-examples/assets/images/pieces/merida/wQ.svg');
 }
 
 #ssb-promotion-box piece.white.knight {
-  background-image: url('chessground/assets/images/pieces/merida/wN.svg');
+  background-image: url('chessground-examples/assets/images/pieces/merida/wN.svg');
 }
 
 #ssb-promotion-box piece.white.bishop {
-  background-image: url('chessground/assets/images/pieces/merida/wB.svg');
+  background-image: url('chessground-examples/assets/images/pieces/merida/wB.svg');
 }
 
 #ssb-promotion-box piece.white.rook {
-  background-image: url('chessground/assets/images/pieces/merida/wR.svg');
+  background-image: url('chessground-examples/assets/images/pieces/merida/wR.svg');
 }
 
 
 #ssb-promotion-box piece.black.queen {
-  background-image: url('chessground/assets/images/pieces/merida/bQ.svg');
+  background-image: url('chessground-examples/assets/images/pieces/merida/bQ.svg');
 }
 
 #ssb-promotion-box piece.black.knight {
-  background-image: url('chessground/assets/images/pieces/merida/bN.svg');
+  background-image: url('chessground-examples/assets/images/pieces/merida/bN.svg');
 }
 
 #ssb-promotion-box piece.black.bishop {
-  background-image: url('chessground/assets/images/pieces/merida/bB.svg');
+  background-image: url('chessground-examples/assets/images/pieces/merida/bB.svg');
 }
 
 #ssb-promotion-box piece.black.rook {
-  background-image: url('chessground/assets/images/pieces/merida/bR.svg');
+  background-image: url('chessground-examples/assets/images/pieces/merida/bR.svg');
 }
